dataset1235/2025-2/805158916/users/674524038/executions/3435325918_254684124.log
== RUN (2025-09-03 14:22:05)
-- CODE: 
idade = int(input("Insira sua idade: "))
print(idade)
if (idade >= 18):
    print("Maior_de_idade")
else:
    print("Menor_de_idade")
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:20:52)
-- CODE: 
idade = int(input("Insira sua idade: "))
print(idade)
if (idade >= 18):
print("Maior_de_idade")
else:
print("Menor_de_idade")
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:20:43)
-- CODE: 
idade = int(input("Insira sua idade: "))
print(idade)
if (idade >=) 18:
print("Maior_de_idade")
else:
print("Menor_de_idade")
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if (idade >=) 18:
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if (idade >=) 18:
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if (idade >=) 18:
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if (idade >=) 18:
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if (idade >=) 18:
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if (idade >=) 18:
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:19:31)
-- CODE: 
idade = int(input("Insira sua idade: "))
print(idade)
if idade >= 18:
print("Maior_de_idade")
else:
print("Menor_de_idade")
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:12:56)
-- CODE: 
Idade = input(input())
print(Idade)
if Idade>=18:
print("Maior de idade")
else:
print("Menor de idade")
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior de idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior de idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior de idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior de idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior de idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior de idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:16:08)
-- CODE: 
Idade = int(input())
print(Idade)
if Idade>=18:
print("Maior de idade")
else:
print("Menor de idade")
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior de idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior de idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior de idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior de idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior de idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior de idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:22:25)
-- CODE: 
idade = int(input("Insira sua idade: "))
print(idade)
if (idade >= 18):
    print("Maior de idade")
else:
    print("Menor de idade")
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior de idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor de idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor de idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior de idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior de idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior de idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:23:24)
-- CODE: 
idade = int(input("Insira sua idade: "))
print(idade)
if (idade >= 18):
    print("Maior_de_idade")
else:
    print("Menor_de_idade")
  

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 14:22:53)
-- CODE: 
idade = int(input("Insira sua idade: "))
print(idade)
if (idade >= 18):
    print("Maior de idade")
else:
    print("Menor de idade")
  

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior de idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor de idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor de idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior de idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior de idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior de idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:19:05)
-- CODE: 
idade = int(input("Insira sua idade: "))
print(idade)
if idade >= 18:
print("Maior_de_idade")
else:
print("Menor_de_idade")
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:23:06)
-- CODE: 
idade = int(input("Insira sua idade: "))
print(idade)
if (idade >= 18):
    print("Maior de idade")
else:
    print("Menor de idade")
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior de idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor de idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor de idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior de idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior de idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior de idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:17:35)
-- CODE: 
Idade = int(input("Insira sua idade: "))
print(Idade)
if Idade>=18:
print("Maior_de_idade")
else:
print("Menor_de_idade")
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
